tests/ui/borrowck/issue-88434-minimal-example.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: the evaluated program panicked at 'explicit panic', $DIR/issue-88434-minimal-example.rs:10:5
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
   |
  ::: $DIR/issue-88434-minimal-example.rs:10:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
   |
note: inside `f::<[closure@$DIR/issue-88434-minimal-example.rs:3:25: 3:28]>`
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
   |
  ::: $DIR/issue-88434-minimal-example.rs:10:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
note: inside `_CONST`
  --> $DIR/issue-88434-minimal-example.rs:3:22
   |
LL | const _CONST: &() = &f(&|_| {});
   |                      ^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-88434-minimal-example.rs:3:21
   |
LL | const _CONST: &() = &f(&|_| {});
   |                     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
